# lapse

./: README.md
docs/: architecture.mmd
lapse/: CMakeLists.txt  Makefile  README.md
lapse/src/: lapse.cpp  sha256.cpp  sha256.hpp
lapse/tests/: smoke.sh
